--- a/angular.json
+++ b/angular.json
@@ -61,7 +61,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "pensionManagementUI:build"
+            "browserTarget": "pensionManagementUI:build",
+            "proxyConfig": "src/proxy.conf.json"
           },
           "configurations": {
             "production": {
@@ -120,5 +121,8 @@
       }
     }
   },
-  "defaultProject": "pensionManagementUI"
+  "defaultProject": "pensionManagementUI",
+  "cli": {
+    "analytics": false
+  }
 }
